# dayz_loot_editor

./: .flake8  .gitignore  Chernarus.sql  Chernarus1.db  Chernarus10.db  Chernarus3.db  Chernarus4.db  Chernarus7.db  Chiemsee.sql  DayZ_LootEditor.spec  Deerisle.sql  Deerisle1.db  Deerisle1.sql  Deerisle4.db  DemoVideo1.db  DumpAttatch.json  Expanded1.db  Hunter.xml  JesusChrist1  LICENSE  Livonia.sql  Livonia1  Livonia1.db  Namalsk.sql  Namalsk1.db  Namalsk2.db  Namalsk3.db  Namalsk4.db  Namalsk5.db  README.md  TestNamalsk1.db  TraderConfig.txt  WhyNoImport.db  app.ini  app.py  chimsee.db  chimsee.db-journal  compileHere.bat  config.xml  dayz_items_1.db  (+39 more)
.github/workflows/: ci.yaml
Expansion/Market/: armband.json  assault rifles.json
Expansion/TraderZones/: World.json  under.json  (+1 more)
app/: __init__.py  auth.py
compiled/: DayZ_LootEditor.spec  Livonia.sql  config.xml
config/: __init__.py  config_manager.py  ini_manager.py
database/: __init__.py  dao.py  init_db.py
dayz_api/: .gitignore
dev_scripts/: add_user.py
model/: __init__.py  item.py
output/: config.xml
release/: Chimsee.sql  Deerisle.sql  Deerisle1.db  Namalsk.sql  config.xml
tests/: HLYLTest.py  checktkinter.py  test.xml  test_app.py  test_config.py  test_db.py  test_xml.py
ui/: __init__.py  combo_box_manager.py  db.py  distibutor.py  linkitems.py  new_items.py  setprices.py
utility/: __init__.py  api_calls.py  categories.py  combo_box_manager.py  distibutor.py  distributor.py  exportTrader.py  importTrader.py  spawnable.py
xml_manager/: __init__.py  xml_parser.py  xml_writer.py
(+30 files in other folders)
