[tool.poetry]
name = "dayz_loot_editor"
version = "0.1.0"
description = ""
authors = ["christianbomholt"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
flake8 = "^3.8.4"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
gunicorn = "^20.0.4"
importlib-metadata = "^3.3.0"
itsdangerous = "^1.1.0"
Jinja2 = "^2.11.2"
MarkupSafe = "^1.1.1"
mccabe = "^0.6.1"
pycodestyle = "^2.6.0"
pyflakes = "^2.2.0"
SQLAlchemy = "^1.3.22"
typing-extensions = "^3.7.4"
Werkzeug = "^1.0.1"
zipp = "^3.4.0"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
